--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
     </head>
     <body>
         <div class="up-section">up section</div>
-        <div class="nav">nav</div>
+        <div class="nav">
+            <ul class="nav-buttons-group">
+                <li>Home</li>
+                <li>About</li>
+                <li>Contact me</li>
+            </ul>
+        </div>
         <div class="hero">hero</div>
         <div class="main-section">main</div>
         <footer class="footer">footer</footer>
