Finished demo html page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Document</title>
     </head>
     <body>
-        <div class="up-section">up section</div>
+        <!-- <div class="up-section">up section</div> -->
         <div class="nav">
             <ul class="nav-buttons-group">
                 <li>Home</li>
@@ -15,9 +15,17 @@
                 <li>Contact me</li>
             </ul>
         </div>
-        <div class="hero">hero</div>
-        <div class="main-section">main</div>
-        <footer class="footer">footer</footer>
+        <div class="hero"></div>
+        <div class="main-section">
+            <h1>Welcome!</h1>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Facilis repellendus libero quod, laudantium eaque nulla soluta
+                explicabo maxime ducimus eos voluptatum. Animi fugiat nobis qui
+                aut! At eveniet dolore delectus.
+            </p>
+        </div>
+        <footer class="footer"></footer>
         <script src="./script.js"></script>
     </body>
 </html>
